fix: spacing

--- a/packages/components/src/components/structured-list/_mixins.scss
+++ b/packages/components/src/components/structured-list/_mixins.scss
@@ -33,8 +33,8 @@
 /// @group structured-list
 /// @param {Number} $padding [$structured-list-padding]
 @mixin padding-th($padding: $structured-list-padding) {
-  padding: $carbon--spacing-05 $carbon--spacing-05 $carbon--spacing-03
-    $carbon--spacing-05;
+  padding: $carbon--spacing-05 $carbon--spacing-03 $carbon--spacing-03
+    $carbon--spacing-03;
 }
 
 /// Used only for normal structured-list
@@ -42,6 +42,6 @@
 /// @group structured-list
 /// @param {Number} $padding [$structured-list-padding]
 @mixin padding-td($padding: $structured-list-padding) {
-  padding: $carbon--spacing-05 $carbon--spacing-05 $carbon--spacing-06
-    $carbon--spacing-05;
+  padding: $carbon--spacing-05 $carbon--spacing-03 $carbon--spacing-06
+    $carbon--spacing-03;
 }
