--- a/packages/components/src/components/structured-list/_structured-list.scss
+++ b/packages/components/src/components/structured-list/_structured-list.scss
@@ -46,32 +46,30 @@
       //8px padding all over
     }
 
-    &.#{$prefix}--structured-list--condensed
-      .#{$prefix}--structured-list-row
+    .#{$prefix}--structured-list-row
       .#{$prefix}--structured-list-td:first-of-type,
-    &.#{$prefix}--structured-list--condensed
-      .#{$prefix}--structured-list-row
+    .#{$prefix}--structured-list-row
       .#{$prefix}--structured-list-th:first-of-type {
       padding-left: 1rem;
-      // condensed styles requires 16px padding between columns
+      // specs require 16px spacing between columns
       // 8px side padding between col creates 16 px, with exception of 1st col, which needs an override to be 16px
     }
 
     // Flush list
-    &.#{$prefix}--structured-list--flush .#{$prefix}--structured-list-td,
-    &.#{$prefix}--structured-list--flush .#{$prefix}--structured-list-th {
-      padding-left: 0;
-    }
-
-    &.#{$prefix}--structured-list--condensed.#{$prefix}--structured-list--flush
+    &.#{$prefix}--structured-list--flush
+      .#{$prefix}--structured-list-row
+      .#{$prefix}--structured-list-td,
+    &.#{$prefix}--structured-list--flush
+      .#{$prefix}--structured-list-row
+      .#{$prefix}--structured-list-th,
+    &.#{$prefix}--structured-list--flush
       .#{$prefix}--structured-list-row
       .#{$prefix}--structured-list-td:first-of-type,
-    &.#{$prefix}--structured-list--condensed.#{$prefix}--structured-list--flush
+    &.#{$prefix}--structured-list--flush
       .#{$prefix}--structured-list-row
       .#{$prefix}--structured-list-th:first-of-type {
+      padding-right: 1rem;
       padding-left: 0;
-      // condensed styles requires 16px padding between columns
-      // 8px side padding between col creates 16 px, with exception of 1st col, which needs an override to be 16px
     }
   }
 
